[package]
name = "vector_filter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow2 = "0.18.0"

criterion = "0.4"

[dev-dependencies]
humanize-bytes = "1.0.5"

[[bench]]
name = "filter"
harness = false
